--- a/Astro/Astro.vcxproj.filters
+++ b/Astro/Astro.vcxproj.filters
@@ -1,42 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Astro">
+      <UniqueIdentifier>{0E45D80C-7A59-00BE-43DB-A31DAFAEFCEE}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Astro\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClInclude Include="src\Astro.h" />
     <ClInclude Include="src\Astro\Application.h">
-      <Filter>Header Files</Filter>
+      <Filter>Astro</Filter>
     </ClInclude>
-    <ClInclude Include="src\Astro.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\Astro\Core.h">
+      <Filter>Astro</Filter>
     </ClInclude>
     <ClInclude Include="src\Astro\EntryPoint.h">
-      <Filter>Header Files</Filter>
+      <Filter>Astro</Filter>
     </ClInclude>
     <ClInclude Include="src\Astro\Log.h">
-      <Filter>Header Files</Filter>
+      <Filter>Astro</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Astro\Application.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Astro</Filter>
     </ClCompile>
     <ClCompile Include="src\Astro\Log.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Astro</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
