--- a/Astro/Astro.vcxproj
+++ b/Astro/Astro.vcxproj
@@ -150,6 +150,10 @@
     <ClInclude Include="src\Astro\Application.h" />
     <ClInclude Include="src\Astro\Core.h" />
     <ClInclude Include="src\Astro\EntryPoint.h" />
+    <ClInclude Include="src\Astro\Events\ApplicationEvent.h" />
+    <ClInclude Include="src\Astro\Events\Event.h" />
+    <ClInclude Include="src\Astro\Events\KeyEvent.h" />
+    <ClInclude Include="src\Astro\Events\MouseEvent.h" />
     <ClInclude Include="src\Astro\Log.h" />
   </ItemGroup>
   <ItemGroup>
