--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Astro/vendor/spdlog"]
 	path = Astro/vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "Astro/vendor/GLFW"]
+	path = Astro/vendor/GLFW
+	url = https://github.com/TheCherno/glfw.git
