--- a/Astro/Astro.vcxproj.filters
+++ b/Astro/Astro.vcxproj.filters
@@ -7,6 +7,12 @@
     <Filter Include="Astro\Events">
       <UniqueIdentifier>{32F5479F-1E58-D743-C7DD-0FFAB31FA3C6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Astro.h" />
@@ -34,6 +40,12 @@
     <ClInclude Include="src\Astro\Log.h">
       <Filter>Astro</Filter>
     </ClInclude>
+    <ClInclude Include="src\Astro\Window.h">
+      <Filter>Astro</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\aspch.h" />
   </ItemGroup>
   <ItemGroup>
@@ -42,6 +54,9 @@
     </ClCompile>
     <ClCompile Include="src\Astro\Log.cpp">
       <Filter>Astro</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
+      <Filter>Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\aspch.cpp" />
   </ItemGroup>
