--- a/Astro/Astro.vcxproj.filters
+++ b/Astro/Astro.vcxproj.filters
@@ -7,8 +7,14 @@
     <Filter Include="Astro\Events">
       <UniqueIdentifier>{32F5479F-1E58-D743-C7DD-0FFAB31FA3C6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Astro\ImGui">
+      <UniqueIdentifier>{B8CCEF69-2482-685F-AD76-6236192B5F63}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
     </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
@@ -37,6 +43,9 @@
     <ClInclude Include="src\Astro\Events\MouseEvent.h">
       <Filter>Astro\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Astro\ImGui\ImGuiLayer.h">
+      <Filter>Astro\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\Astro\Layer.h">
       <Filter>Astro</Filter>
     </ClInclude>
@@ -49,6 +58,9 @@
     <ClInclude Include="src\Astro\Window.h">
       <Filter>Astro</Filter>
     </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -58,6 +70,9 @@
     <ClCompile Include="src\Astro\Application.cpp">
       <Filter>Astro</Filter>
     </ClCompile>
+    <ClCompile Include="src\Astro\ImGui\ImGuiLayer.cpp">
+      <Filter>Astro\ImGui</Filter>
+    </ClCompile>
     <ClCompile Include="src\Astro\Layer.cpp">
       <Filter>Astro</Filter>
     </ClCompile>
@@ -66,6 +81,9 @@
     </ClCompile>
     <ClCompile Include="src\Astro\Log.cpp">
       <Filter>Astro</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
