--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,26 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=481,122
-Size=550,680
+Pos=0,19
+Size=549,701
 Collapsed=0
+DockId=0x00000001,0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][Example: Log]
+Pos=551,283
+Size=729,437
+Collapsed=0
+DockId=0x00000004,0
+
+[Docking][Data]
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=364,191 Size=1280,701 Split=X
+  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=549,701 Selected=0xE87781F4
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=729,701 Split=Y
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=729,262 CentralNode=1
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=729,437 Selected=0xDBFE1153
 
