--- a/Astro/Astro.vcxproj.filters
+++ b/Astro/Astro.vcxproj.filters
@@ -1359,6 +1359,7 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
+    <ClInclude Include="src\Astro\Renderer\Shader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Astro\Application.cpp">
@@ -1391,5 +1392,6 @@
     <ClCompile Include="src\aspch.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\Astro\Renderer\Shader.cpp" />
   </ItemGroup>
 </Project>
