--- a/Astro/Astro.vcxproj
+++ b/Astro/Astro.vcxproj
@@ -158,9 +158,12 @@
     <ClInclude Include="src\Astro\LayerStack.h" />
     <ClInclude Include="src\Astro\Log.h" />
     <ClInclude Include="src\Astro\MouseButtonCodes.h" />
+    <ClInclude Include="src\Astro\Renderer\Buffer.h" />
     <ClInclude Include="src\Astro\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Astro\Renderer\Renderer.h" />
     <ClInclude Include="src\Astro\Renderer\Shader.h" />
     <ClInclude Include="src\Astro\Window.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
@@ -589,7 +592,10 @@
     <ClCompile Include="src\Astro\Layer.cpp" />
     <ClCompile Include="src\Astro\LayerStack.cpp" />
     <ClCompile Include="src\Astro\Log.cpp" />
+    <ClCompile Include="src\Astro\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Astro\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Astro\Renderer\Shader.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
