--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,41 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+ViewportPos=1381,196
+ViewportId=0xE927CF2F
 Size=550,680
 Collapsed=0
 
+[Window][Example: Documents]
+ViewportPos=342,283
+ViewportId=0x1FD64BEB
+Size=607,944
+Collapsed=0
+
+[Window][Lettuce]
+ViewportPos=342,283
+ViewportId=0x1FD64BEB
+Pos=8,96
+Size=591,840
+Collapsed=0
+DockId=0xA086D808,0
+
+[Window][Eggplant]
+ViewportPos=342,283
+ViewportId=0x1FD64BEB
+Pos=8,96
+Size=591,840
+Collapsed=0
+DockId=0xA086D808,1
+
+[Window][Carrot]
+ViewportPos=342,283
+ViewportId=0x1FD64BEB
+Pos=8,96
+Size=591,840
+Collapsed=0
+DockId=0xA086D808,2
+
 [Docking][Data]
+DockSpace ID=0xA086D808 Pos=350,379 Size=591,840 CentralNode=1 Selected=0x15EF3519
 
