--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -39,6 +39,11 @@ Size=591,840
 Collapsed=0
 DockId=0xA086D808,2
 
+[Window][Settings]
+Pos=20,27
+Size=312,54
+Collapsed=0
+
 [Docking][Data]
 DockSpace ID=0xA086D808 Pos=350,379 Size=591,840 CentralNode=1 Selected=0x15EF3519
 
