setting to change square position

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1424,461
+ViewportPos=1243,232
 ViewportId=0xE927CF2F
 Size=550,680
 Collapsed=0
@@ -41,8 +41,15 @@ DockId=0xA086D808,2
 
 [Window][Settings]
 Pos=11,22
-Size=334,54
+Size=376,84
 Collapsed=0
+
+[Table][0x20DF7A63,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=42
+Column 3  Weight=1.0000
 
 [Docking][Data]
 DockSpace ID=0xA086D808 Pos=350,379 Size=591,840 CentralNode=1 Selected=0x15EF3519
